@@ -197,8 +197,9 @@ AltOff = {
 
 @noindent
 This example may be rewritten to pass in music expressions,
-
-@lilypond[quote,verbatim,ragged-right]
+@c fixme
+@ignore
+i@l ilypond[quote,verbatim,ragged-right]
 withAlt = #(define-music-function (parser location mag music) (number? ly:music?)
   #{ \override Stem #'length = #$(* 7.0 mag)
      \override NoteHead #'font-size =
@@ -209,8 +210,8 @@ withAlt = #(define-music-function (parser location mag music) (number? ly:music?
 
 { c'2 \withAlt #0.5 {c'4 c'}
   \withAlt #1.5 {c' c'} c'2 }
-@end lilypond
-
+@end l ilypond
+@end ignore
 
 @node Void functions
 @subsection Void functions
